Update podcast guests yaml format

--- a/_podcast/2020-10-01.md
+++ b/_podcast/2020-10-01.md
@@ -2,13 +2,13 @@
 title: Ep. 1. 給同在生技路上的你 ft. 範恩&Yvonne 
 link: https://tmrbiotechmoments.podbean.com/e/01_to_you_on_the_road_of_biotech/
 embed: <iframe src="https://open.spotify.com/embed-podcast/episode/4uHg23l6AldbrH4vHln5pA" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-podcast_guest1: 範恩
-podcast_guest1_linkedin: https://www.linkedin.com/in/fan-en-c-89700a91/
-podcast_guest2: Yvonne
-podcast_guest2_linkedin: https://www.linkedin.com/in/hwyvonnemeng/
+guests:
+- name: 範恩
+  linkedin: https://www.linkedin.com/in/fan-en-c-89700a91/
+- name: Yvonne
+  linkedin: https://www.linkedin.com/in/hwyvonnemeng/
 ---
 
 什麼！Boston Taiwanese Biotechnology Association （波士頓台灣人生物科技協會, BTBA）推出了 podcast？
 
 BTBA 由在大波士頓地區從事生醫研發的一群台灣人於 2012 成立，旨在促進台美生技人間的交流和提供職涯上的建議。除了固定舉辦年會、演講和工作坊之外，現在更推出了一月兩集的 podcast！首集節目將由現在就讀於 Johns Hopkins University Biomedical Engineering 的博士班學生範恩，和在藥廠已經有 6 年工作經驗，現在在新創公司工作，同時也是 BTBA 2020-2021 co-chair 之一的 Yvonne，來為您說說 BTBA 決定製作 podcast 的緣由，還有對這個新企劃未來的期許。
-
