--- a/_podcast/2020-10-15.md
+++ b/_podcast/2020-10-15.md
@@ -2,8 +2,9 @@
 title: Ep. 2. 新藥開發的臨床試驗 ft. Margaret
 link: https://tmrbiotechmoments.podbean.com/e/%e6%96%b0%e8%97%a5%e9%96%8b%e7%99%bc%e7%9a%84%e8%87%a8%e5%ba%8a%e8%a9%a6%e9%a9%97-ft-margaret/
 embed: <iframe src="https://open.spotify.com/embed-podcast/episode/3zv2x8DOYDjFlcgQN3oIVK" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-podcast_guest1: Margaret
-podcast_guest1_linkedin: https://www.linkedin.com/in/margaretwey/
+guests:
+- name: Margaret
+  linkedin: https://www.linkedin.com/in/margaretwey/
 podcast_guest2:
 podcast_guest2_linkedin:
 ---
