--- a/_podcast/2020-11-15.md
+++ b/_podcast/2020-11-15.md
@@ -2,8 +2,9 @@
 title: Ep. 4. 半路轉行，彎道超車—藥物研發中的資料科學家 ft. Mike
 link: https://tmrbiotechmoments.podbean.com/e/%e5%8d%8a%e8%b7%af%e8%bd%89%e8%a1%8c%ef%bc%8c%e5%bd%8e%e9%81%93%e8%b6%85%e8%bb%8a%ef%bc%9a%e8%97%a5%e7%89%a9%e7%a0%94%e7%99%bc%e4%b8%ad/
 embed: <iframe src="https://open.spotify.com/embed-podcast/episode/5uME1oNg94He23Kk18EMfC" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe> 
-podcast_guest1: Michael Chien-Cheng Shih 
-podcast_guest1_linkedin: https://www.linkedin.com/in/michaelcshih/ 
+guests:
+- name: Michael Chien-Cheng Shih 
+  linkedin: https://www.linkedin.com/in/michaelcshih/ 
 podcast_guest2:
 podcast_guest2_linkedin:
 ---
