--- a/_podcast/2020-12-15.md
+++ b/_podcast/2020-12-15.md
@@ -2,8 +2,9 @@
 title: Ep. 6. 啟程永遠不晚，堅定夢想實現—新藥開發的重要一環：藥物代謝動力學 ft. Frank
 link: https://tmrbiotechmoments.podbean.com/e/啟程永遠不晚，堅定夢想實現—新/
 embed: <iframe src="https://open.spotify.com/embed-podcast/episode/2fLKpq6zBS45JrMsSRPpsW" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-podcast_guest1: Frank Lee 
-podcast_guest1_linkedin: https://www.linkedin.com/in/frank-lee-7238a125/
+guests:
+- name: Frank Lee 
+  linkedin: https://www.linkedin.com/in/frank-lee-7238a125/
 podcast_guest2:
 podcast_guest2_linkedin:
 ---
