--- a/_podcast/2021-01-01.md
+++ b/_podcast/2021-01-01.md
@@ -2,8 +2,9 @@
 title: Ep. 7. COVID-19疫情期間生技業新人求職攻略 ft. Meredith
 link: https://tmrbiotechmoments.podbean.com/e/covid期間生技業新人求職全攻略-ft-meredith/
 embed: <iframe src="https://open.spotify.com/embed-podcast/episode/5bmyGwEWr2ZY1w28dLskz8" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-podcast_guest1: Meredith (Szu-Yu) Kuo
-podcast_guest1_linkedin: https://www.linkedin.com/in/meredith-szu-yu-kuo/
+guests:
+- name: Meredith (Szu-Yu) Kuo
+  linkedin: https://www.linkedin.com/in/meredith-szu-yu-kuo/
 podcast_guest2:
 podcast_guest2_linkedin:
 ---
