--- a/_podcast/2021-01-15.md
+++ b/_podcast/2021-01-15.md
@@ -2,8 +2,9 @@
 title: Ep. 8. 解密 HEOR (健康經濟與療效研究) 和 Real World Data ft. Rosa
 link: https://tmrbiotechmoments.podbean.com/e/解密-heor-健康經濟與療效研究-和-real-world-data-ft-rosa/
 embed: <iframe src="https://open.spotify.com/embed-podcast/episode/1uu1Y6tJYr0bOSnWtZJQle" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-podcast_guest1: Rosa Wang
-podcast_guest1_linkedin: https://www.linkedin.com/in/rosa-wang-5aa2a125/
+guests:
+- name: Rosa Wang
+  linkedin: https://www.linkedin.com/in/rosa-wang-5aa2a125/
 podcast_guest2:
 podcast_guest2_linkedin:
 ---
