--- a/_podcast/2021-04-01.md
+++ b/_podcast/2021-04-01.md
@@ -2,8 +2,9 @@
 title: Ep. 14. 電子藥物創業之旅 ft. 羅怡凱
 link: https://tmrbiotechmoments.podbean.com/e/電子藥物創業之旅-ft-羅怡凱/
 embed: <iframe src="https://open.spotify.com/embed-podcast/episode/5i8MU6EcjM0Ll7lfXNVgUq" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-podcast_guest1: 羅怡凱
-podcast_guest1_linkedin: https://www.linkedin.com/in/yi-kai-lo-53531977
+guests:
+- name: 羅怡凱
+  linkedin: https://www.linkedin.com/in/yi-kai-lo-53531977
 podcast_guest2:
 podcast_guest2_linkedin:
 ---
