--- a/_podcast/2021-04-15.md
+++ b/_podcast/2021-04-15.md
@@ -2,8 +2,9 @@
 title: Ep. 15. 不一樣的路 Crossing the River ft. 周慧泉 Judy Chou
 link: https://tmrbiotechmoments.podbean.com/e/不一樣的路-crossing-the-river-ft-周慧泉-judy-chou/
 embed: <iframe src="https://open.spotify.com/embed-podcast/episode/5ih90RdguWFSyG1onjJdKl" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-podcast_guest1: 周慧泉 Judy Chou
-podcast_guest1_linkedin: https://www.linkedin.com/in/judy-chou-ph-d-biotech
+guests:
+- name: 周慧泉 Judy Chou
+  linkedin: https://www.linkedin.com/in/judy-chou-ph-d-biotech
 podcast_guest2:
 podcast_guest2_linkedin:
 ---
