--- a/_podcast/2021-05-01.md
+++ b/_podcast/2021-05-01.md
@@ -2,8 +2,9 @@
 title: Ep. 16. 藥廠法規部門跟你想的不一樣 ft. Hsiao-Ling Hung 洪筱玲
 link: https://tmrbiotechmoments.podbean.com/e/法規部門跟你想的不一樣-ft-hsiao-ling-hung-洪筱玲/
 embed: <iframe src="https://open.spotify.com/embed-podcast/episode/4ya8GsywcY67wQSHu6gWPp" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-podcast_guest1: 洪筱玲 Hsiao-Ling Hung
-podcast_guest1_linkedin: https://www.linkedin.com/in/hsiao-ling-hung-phd-rac-7771113
+guests:
+- name: 洪筱玲 Hsiao-Ling Hung
+  linkedin: https://www.linkedin.com/in/hsiao-ling-hung-phd-rac-7771113
 podcast_guest2:
 podcast_guest2_linkedin:
 ---
