--- a/_podcast/2021-05-15.md
+++ b/_podcast/2021-05-15.md
@@ -2,8 +2,9 @@
 title: Ep. 17. 新藥開發的製造與生產 ft. 孫大峻 Dajun Sun
 link: https://tmrbiotechmoments.podbean.com/e/新藥開發的製造與生產-ft-孫大峻-dajun-sun/
 embed: <iframe src="https://open.spotify.com/embed-podcast/episode/2yLuES7vZcYN7NboIhxEOV" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-podcast_guest1: 孫大峻 Dajun Sun
-podcast_guest1_linkedin: https://www.linkedin.com/in/dajunsun/
+guests:
+- name: 孫大峻 Dajun Sun
+  linkedin: https://www.linkedin.com/in/dajunsun/
 podcast_guest2:
 podcast_guest2_linkedin:
 ---
