--- a/_podcast/2021-06-01.md
+++ b/_podcast/2021-06-01.md
@@ -2,8 +2,9 @@
 title: Ep. 18. 創新研發無國界，精準醫療無死角，從零開始的因緣際會 ft. 張明奎
 link: https://tmrbiotechmoments.podbean.com/e/創新研發無國界，精準醫療無死角/
 embed: <iframe src="https://open.spotify.com/embed-podcast/episode/6EyONtjGPKlsdv5VQvPywV" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-podcast_guest1: 張明奎
-podcast_guest1_linkedin: https://www.linkedin.com/in/mkjang/
+guests:
+- name: 張明奎
+  linkedin: https://www.linkedin.com/in/mkjang/
 podcast_guest2:
 podcast_guest2_linkedin:
 ---
