--- a/_podcast/2021-06-15.md
+++ b/_podcast/2021-06-15.md
@@ -2,8 +2,9 @@
 title: Ep. 19. 藥廠中的活字典－醫藥事務部門 (Medical Affairs) ft. Jessie
 link: https://tmrbiotechmoments.podbean.com/e/藥廠中的活字典－醫藥事務部門medical-affairs-ftjessie/
 embed: <iframe src="https://open.spotify.com/embed-podcast/episode/1f9uDlpni2gwRAXyxEzVqX" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-podcast_guest1: 張嘉玲
-podcast_guest1_linkedin: https://www.linkedin.com/in/jessie-chia-ling-chang-1a352371/
+guests:
+- name: 張嘉玲
+  linkedin: https://www.linkedin.com/in/jessie-chia-ling-chang-1a352371/
 podcast_guest2:
 podcast_guest2_linkedin:
 ---
