--- a/_podcast/2021-07-01 .md
+++ b/_podcast/2021-07-01 .md
@@ -2,8 +2,9 @@
 title: Ep. 20. 發掘生技璞玉的冒險王，開創自我價值的投資家 ft. 張劭聿
 link: https://tmrbiotechmoments.podbean.com/e/發掘生技璞玉的冒險王，開創自我/
 embed: <iframe src="https://open.spotify.com/embed-podcast/episode/1VfDCg9rQnsIrWe6aELKeV" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-podcast_guest1: 張劭聿
-podcast_guest1_linkedin: https://www.linkedin.com/in/shaoyuchang/
+guests:
+- name: 張劭聿
+  linkedin: https://www.linkedin.com/in/shaoyuchang/
 podcast_guest2:
 podcast_guest2_linkedin:
 ---
