--- a/_podcast/2021-07-15.md
+++ b/_podcast/2021-07-15.md
@@ -2,8 +2,9 @@
 title: Ep. 21. 我是你的智囊團－生技顧問業大解密 ft. Gugu
 link: https://tmrbiotechmoments.podbean.com/e/ft-gugu/
 embed: <iframe src="https://open.spotify.com/embed-podcast/episode/5FblqRPb36th2LbvETZoPy" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-podcast_guest1: Liang-Yu (Gugu) Pang
-podcast_guest1_linkedin: https://www.linkedin.com/in/gugupang/
+guests:
+- name: Liang-Yu (Gugu) Pang
+  linkedin: https://www.linkedin.com/in/gugupang/
 podcast_guest2:
 podcast_guest2_linkedin:
 ---
