--- a/_podcast/2020-11-01.md
+++ b/_podcast/2020-11-01.md
@@ -2,8 +2,9 @@
 title: Ep. 3. 千里之行，始於足下 — 新藥研發的第一步：標的確認 ft. Shian-Huey Chiang
 link: https://tmrbiotechmoments.podbean.com/e/%e5%8d%83%e9%87%8c%e4%b9%8b%e8%a1%8c%ef%bc%8c%e5%a7%8b%e6%96%bc%e8%b6%b3%e4%b8%8b%e2%80%94%e6%96%b0%e8%97%a5%e7%a0%94%e7%99%bc/
 embed: <iframe src="https://open.spotify.com/embed-podcast/episode/4x2hcob0t88V9FNFe4qac2" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-podcast_guest1: Shian-Huey Chiang
-podcast_guest1_linkedin: https://www.linkedin.com/in/shianhueychiang/
+guests:
+- name: Shian-Huey Chiang
+  linkedin: https://www.linkedin.com/in/shianhueychiang/
 podcast_guest2:
 podcast_guest2_linkedin:
 ---
