--- a/_podcast/2020-12-01.md
+++ b/_podcast/2020-12-01.md
@@ -2,8 +2,9 @@
 title: Ep. 5. 醫師在藥廠 — 臨床執業以外的職涯選項 ft. Starr
 link: https://tmrbiotechmoments.podbean.com/e/醫師在藥廠臨床執業以外的職涯選項ft-s/
 embed: <iframe src="https://open.spotify.com/embed-podcast/episode/51CP74BhGbpx42fQmEf7RJ" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-podcast_guest1: Szu-Ta (Starr) Chen 
-podcast_guest1_linkedin: https://www.linkedin.com/in/szutachen-md-phd/
+guests:
+- name: Szu-Ta (Starr) Chen 
+  linkedin: https://www.linkedin.com/in/szutachen-md-phd/
 podcast_guest2:
 podcast_guest2_linkedin:
 ---
