--- a/_podcast/2021-02-01.md
+++ b/_podcast/2021-02-01.md
@@ -2,8 +2,9 @@
 title: Ep. 8. 生物標記於藥物開發的今生與未來 ft. Ric
 link: https://tmrbiotechmoments.podbean.com/e/生物標記於藥物開發的今生與未來-ft-ric/
 embed: <iframe src="https://open.spotify.com/embed-podcast/episode/7njfEUuPedrTXBBdEsr12x" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-podcast_guest1: Richard Liang
-podcast_guest1_linkedin: https://www.linkedin.com/in/richardliangphd/
+guests:
+- name: Richard Liang
+  linkedin: https://www.linkedin.com/in/richardliangphd/
 podcast_guest2:
 podcast_guest2_linkedin:
 ---
