--- a/_podcast/2021-02-15.md
+++ b/_podcast/2021-02-15.md
@@ -2,8 +2,9 @@
 title: Ep. 9. 新藥開發的掌舵手：醫療研發專科－發炎與免疫學部門 ft. Lih-Ling Lin
 link: https://tmrbiotechmoments.podbean.com/e/新藥開發的掌舵手：醫療研發專科/
 embed: <iframe src="https://open.spotify.com/embed-podcast/episode/3RNMYzEKAHeTPCRfhHPl5n" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-podcast_guest1: Lih-Ling Lin
-podcast_guest1_linkedin: https://www.linkedin.com/in/lih-ling-lin-12bb4b4/
+guests:
+- name: Lih-Ling Lin
+  linkedin: https://www.linkedin.com/in/lih-ling-lin-12bb4b4/
 podcast_guest2:
 podcast_guest2_linkedin:
 ---
