--- a/_podcast/2021-03-01.md
+++ b/_podcast/2021-03-01.md
@@ -2,8 +2,9 @@
 title: Ep. 10. 精準醫療與藥物開發全面啟動 ft. 人工智慧絕地武士林清詠
 link: https://tmrbiotechmoments.podbean.com/e/ft-ching-yung-lin/
 embed: <iframe src="https://open.spotify.com/embed-podcast/episode/1KqBz6Ubd1Qsgx5HMMysoQ" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-podcast_guest1: 林清詠
-podcast_guest1_linkedin: https://www.linkedin.com/in/ching-yung-lin-97b640/
+guests:
+- name: 林清詠
+  linkedin: https://www.linkedin.com/in/ching-yung-lin-97b640/
 podcast_guest2:
 podcast_guest2_linkedin:
 ---
