--- a/_podcast/2021-03-15.md
+++ b/_podcast/2021-03-15.md
@@ -2,8 +2,9 @@
 title: Ep. 13. 讓我們來談談疫苗 ft. 連加恩醫師
 link: https://tmrbiotechmoments.podbean.com/e/讓我們來談談疫苗-ft-連加恩醫師/
 embed: <iframe src="https://open.spotify.com/embed-podcast/episode/3Vi8ooPDh883ihAEq9ACup" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-podcast_guest1: 連加恩
-podcast_guest1_linkedin: https://www.linkedin.com/in/allen-chia-en-lien-m-d-drph-1670b721
+guests:
+- name: 連加恩
+  linkedin: https://www.linkedin.com/in/allen-chia-en-lien-m-d-drph-1670b721
 podcast_guest2:
 podcast_guest2_linkedin:
 ---
