--- a/_podcast/2021-08-01.md
+++ b/_podcast/2021-08-01.md
@@ -2,8 +2,9 @@
 title: Ep. 22. S1 finale－感謝同在生技路上的你 ft. 生技來一刻製作團隊
 link: https://tmrbiotechmoments.podbean.com/e/s1-最終回感謝同在生技路上的你/
 embed: <iframe src="https://open.spotify.com/embed-podcast/episode/4zozd79qdpf0GrwoKGPVwY" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-podcast_guest1: BTBA團隊
-podcast_guest1_linkedin: https://www.linkedin.com/company/btbatw/
+guests:
+- name: BTBA團隊
+  linkedin: https://www.linkedin.com/company/btbatw/
 podcast_guest2:
 podcast_guest2_linkedin:
 ---
