add recording to event pages

--- a/_events/2021-12-11-10:00/2021-12-11-10:00.md
+++ b/_events/2021-12-11-10:00/2021-12-11-10:00.md
@@ -25,3 +25,6 @@ Are you interested in a career in academia but still have doubts or questions? C
 - Moderator:
     - Annie Cheng, Postdoctoral research fellow, Brigham and Women’s Hospital, Wyss Institute
     - Meng-Ju Wu, Postdoctoral research fellow, Massachusetts General Hospital Cancer Center
+
+- Recording of Seminar
+    - [![2021 Dec 11 - The Journey from Postdoc to PI](https://yt-embed.herokuapp.com/embed?v=9wb31MztWIU)](https://www.youtube.com/watch?v=9wb31MztWIU "2021 Dec 11 - The Journey from Postdoc to PI")
