--- a/_events/2021-11-21/2021-11-21.md
+++ b/_events/2021-11-21/2021-11-21.md
@@ -28,3 +28,6 @@ Interested in a career in computational biology? Come and hear from our group of
     - 2:00 pm - 3:10 pm Panel discussion
     - 3:10 pm - 3:30 pm Networking
     - 3:40 pm - 4:40 pm Organizing committee Meeting
+
+- Recording of Seminar
+    - [![2021 Nov 21 - Career Paths in Computational Biology](https://yt-embed.herokuapp.com/embed?v=qLI-33sbJYs)](https://www.youtube.com/watch?v=qLI-33sbJYs "2021 Nov 21 - Career Paths in Computational Biology")
