--- a/_events/2021-12-06/2021-11-21.md
+++ b/_events/2021-12-06/2021-11-21.md
@@ -39,3 +39,5 @@ fb-link: https://www.facebook.com/events/325254332455263
     - 結語
 - 主辦單位: 科技部、駐波士頓科技組、波士頓台灣人生物科技協會
 - 協辦單位: 駐美代表處科技組、駐舊金山辦事處科技組、駐洛杉磯辦事處科技組、駐休士頓辦事處科技組、駐加拿大代表處科技組、Bay Area Taiwanese Biotechnology Association
+- Recording of Event
+    - [![2021 Dec 6 - 2030跨世代年輕學者方案海外說明會](https://yt-embed.herokuapp.com/embed?v=IRgno7GwM4Y)](https://www.youtube.com/watch?v=IRgno7GwM4Y "2021 Dec 6 - 2030跨世代年輕學者方案海外說明會")
