switch to youtube-embed markdown

--- a/_events/2021-11-21/2021-11-21.md
+++ b/_events/2021-11-21/2021-11-21.md
@@ -30,4 +30,4 @@ Interested in a career in computational biology? Come and hear from our group of
     - 3:40 pm - 4:40 pm Organizing committee Meeting
 
 - Recording of Seminar
-    - [![2021 Nov 21 - Career Paths in Computational Biology](https://yt-embed.herokuapp.com/embed?v=qLI-33sbJYs)](https://www.youtube.com/watch?v=qLI-33sbJYs "2021 Nov 21 - Career Paths in Computational Biology")
+    - [![IMAGE_ALT](https://img.youtube.com/vi/qLI-33sbJYs/sddefault.jpg)](https://www.youtube.com/watch?v=qLI-33sbJYs)
