--- a/_events/2021-12-11-10:00/2021-12-11-10:00.md
+++ b/_events/2021-12-11-10:00/2021-12-11-10:00.md
@@ -27,4 +27,4 @@ Are you interested in a career in academia but still have doubts or questions? C
     - Meng-Ju Wu, Postdoctoral research fellow, Massachusetts General Hospital Cancer Center
 
 - Recording of Seminar
-    - [![2021 Dec 11 - The Journey from Postdoc to PI](https://yt-embed.herokuapp.com/embed?v=9wb31MztWIU)](https://www.youtube.com/watch?v=9wb31MztWIU "2021 Dec 11 - The Journey from Postdoc to PI")
+    - [![IMAGE_ALT](https://img.youtube.com/vi/9wb31MztWIU/sddefault.jpg)](https://www.youtube.com/watch?v=9wb31MztWIU)
