add 2022-01-23 youtube link

--- a/_events/2022-01-23/2022-01-23.md
+++ b/_events/2022-01-23/2022-01-23.md
@@ -34,3 +34,6 @@ fb-link: https://www.facebook.com/events/658794392226114
     - 2:30 pm - 3:10 pm Panel discussion
     - 3:10 pm - 3:25 pm Q & A
     - 3:25 pm - 3:45 pm Networking
+
+- Recording of Seminar
+    - [![IMAGE_ALT](https://img.youtube.com/vi/vdRPxfosfTI/sddefault.jpg)](https://www.youtube.com/watch?v=vdRPxfosfTI)
