add 2022-01-14 youtube link

--- a/_events/2022-01-14/2022-01-14.md
+++ b/_events/2022-01-14/2022-01-14.md
@@ -25,3 +25,6 @@ How to clearly present information regarding pollution, exposure, disease, and h
 - Topic 2: "Integrated Environmental and Health Approaches"
     - Speaker: Ya-Yun Cheng 鄭雅勻, PhD. Postdoctoral Research Fellow, Department of Environmental Health, Harvard T.H. Chan School of Public Health.
 - Moderator: Fan-Yun Lan 藍凡耘, MD, MS, PhD. Postdoctoral Research Fellow, Cambridge Health Alliance / Harvard Medical School / Harvard T.H. Chan School of Public Health.
+
+- Recording of Seminar
+    - [![IMAGE_ALT](https://img.youtube.com/vi/LInxDLriykc/sddefault.jpg)](https://www.youtube.com/watch?v=LInxDLriykc)
