--- a/_podcast/2021-10-16.md
+++ b/_podcast/2021-10-16.md
@@ -1,5 +1,5 @@
 ---
-title: Ep. 23 生技來一刻 第二季 Trailer
+title: S2 生技來一刻 第二季 Trailer
 link: https://tmrbiotechmoments.podbean.com/e/%e7%94%9f%e6%8a%80%e4%be%86%e4%b8%80%e5%88%bb-%e7%ac%ac%e4%ba%8c%e5%ad%a3-trailer/
 embed: <iframe src="https://open.spotify.com/embed/episode/2ArZDOaNDf66rnzkC5FXLK" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 ---
