--- a/_podcast/2021-11-01.md
+++ b/_podcast/2021-11-01.md
@@ -1,5 +1,5 @@
 ---
-title: Ep. 24. Season 2 我們回來啦! 新任會長專訪
+title: S2 Ep.1 Season 2 我們回來啦! 新任會長專訪
 link: https://tmrbiotechmoments.podbean.com/e/season-2-%e6%88%91%e5%80%91%e5%9b%9e%e4%be%86%e5%95%a6-%e6%96%b0%e4%bb%bb%e6%9c%83%e9%95%b7%e5%b0%88%e8%a8%aa/
 embed: <iframe src="https://open.spotify.com/embed/episode/7kVOJbgZgSO8T3Aagchjhk" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 guests:
