--- a/_podcast/2021-11-15.md
+++ b/_podcast/2021-11-15.md
@@ -1,5 +1,5 @@
 ---
-title: Ep. 25 學界PI迷思大破解 ft. Erica Cai & Monica Wey
+title: S2 Ep.2 學界PI迷思大破解 ft. Erica Cai & Monica Wey
 link: https://tmrbiotechmoments.podbean.com/e/%e5%ad%b8%e7%95%8cpi%e8%bf%b7%e6%80%9d%e5%a4%a7%e7%a0%b4%e8%a7%a3-ft-erica-cai-monica-wey/
 embed: <iframe src="https://open.spotify.com/embed/episode/7aRId39WMmSXeqoogpMi0s" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 ---
