--- a/_podcast/2021-12-01.md
+++ b/_podcast/2021-12-01.md
@@ -1,5 +1,5 @@
 ---
-title: Ep. 26 大海撈針─癌症基因檢測 ft. 吳欣達
+title: S2 Ep.3 大海撈針─癌症基因檢測 ft. 吳欣達
 link: https://tmrbiotechmoments.podbean.com/e/%e5%a4%a7%e6%b5%b7%e6%92%88%e9%87%9d%e2%94%80%e7%99%8c%e7%97%87%e5%9f%ba%e5%9b%a0%e6%aa%a2%e6%b8%ac-ft-%e5%90%b3%e6%ac%a3%e9%81%94/
 embed: <iframe src="https://open.spotify.com/embed/episode/0GnduW7DtJWkt2fYAI52yl" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 ---
