--- a/_podcast/2022-02-01.md
+++ b/_podcast/2022-02-01.md
@@ -1,5 +1,5 @@
 ---
-title: Ep. 30 科學家的科學家 ft. 林昶廷
+title: S2 Ep.7 科學家的科學家 ft. 林昶廷
 link: https://tmrbiotechmoments.podbean.com/e/%e7%a7%91%e5%ad%b8%e5%ae%b6%e7%9a%84%e7%a7%91%e5%ad%b8%e5%ae%b6-ft-%e6%9e%97%e6%98%b6%e5%bb%b7/
 embed: <iframe src="https://open.spotify.com/embed/episode/1HUifEQrNbk9RxCAUhvL3T" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 ---
