--- a/_podcast/2022-01-01.md
+++ b/_podcast/2022-01-01.md
@@ -1,5 +1,5 @@
 ---
-title: Ep. 28 Faculty as Entrepreneurs I 學者創業專訪 I - Smart Insulin 聰明的胰島素 ft. Dr. Danny Hung-Chieh Chou 周宏杰博士
+title: S2 Ep.5 Faculty as Entrepreneurs I 學者創業專訪 I - Smart Insulin 聰明的胰島素 ft. Dr. Danny Hung-Chieh Chou 周宏杰博士
 link: https://tmrbiotechmoments.podbean.com/e/faculty-asentrepreneursi-%e5%ad%b8%e8%80%85%e5%89%b5%e6%a5%ad%e5%b0%88%e8%a8%aa-ismart-insulin-%e8%81%b0%e6%98%8e%e7%9a%84/
 embed: <iframe src="https://open.spotify.com/embed/episode/0bCUXaaquPmoIovsYl4n9C" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 ---
