--- a/_podcast/2022-01-15.md
+++ b/_podcast/2022-01-15.md
@@ -1,5 +1,5 @@
 ---
-title: Ep. 29 深度學習於醫學影像的實踐 ft. 呂任棠 Jen-Tang Lu
+title: S2 Ep.6 深度學習於醫學影像的實踐 ft. 呂任棠 Jen-Tang Lu
 link: https://tmrbiotechmoments.podbean.com/e/%e6%b7%b1%e5%ba%a6%e5%ad%b8%e7%bf%92%e6%96%bc%e9%86%ab%e5%ad%b8%e5%bd%b1%e5%83%8f%e7%9a%84%e5%af%a6%e8%b8%90-ft%e5%91%82%e4%bb%bb%e6%a3%a0jentanglu/
 embed: <iframe src="https://open.spotify.com/embed/episode/0wuUAnLzxsIyGJrU5TYl2B" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 ---
