--- a/_podcast/2022-06-04.md
+++ b/_podcast/2022-06-04.md
@@ -1,5 +1,5 @@
 ---
-title: S2EP15: 台灣健保價值以及生技創新環境 ft. 張鴻仁
+title: S2 Ep.15 台灣健保價值以及生技創新環境 ft. 張鴻仁
 link: https://tmrbiotechmoments.podbean.com/e/%e5%8f%b0%e7%81%a3%e5%81%a5%e4%bf%9d%e5%83%b9%e5%80%bc%e4%bb%a5%e5%8f%8a%e7%94%9f%e6%8a%80%e5%89%b5%e6%96%b0%e7%92%b0%e5%a2%83ft-%e5%bc%b5/
 embed: <iframe src="https://open.spotify.com/episode/5f3LwU9XY202jA2r46bjcC" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 ---
