--- a/_podcast/2022-07-02.md
+++ b/_podcast/2022-07-02.md
@@ -1,5 +1,5 @@
 ---
-title: S2EP17: 基因編輯療法與罕見疾病
+title: S2 Ep.17 基因編輯療法與罕見疾病
 link: https://tmrbiotechmoments.podbean.com/e/%e5%9f%ba%e5%9b%a0%e7%b7%a8%e8%bc%af%e7%99%82%e6%b3%95%e8%88%87%e7%bd%95%e8%a6%8b%e7%96%be%e7%97%85-ft-%e9%96%94%e8%ad%af%e7%ab%8b-dr-yi-li-min/
 embed: <iframe src="https://open.spotify.com/episode/1HeOKImXZS7bLh6JeQTezy" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 ---
