Rename the event title and test syntax

--- a/_events/2022-11-18/2022-11-18.md
+++ b/_events/2022-11-18/2022-11-18.md
@@ -2,12 +2,12 @@
 layout: event-post
 serie: Academic Seminar
 # categories: [blog]
-name: BTBA November Academic Seminar–How do plants adapt to climate change and pollution?
+name: 2022 BTBA November Academic Seminar–How do plants adapt to climate change and pollution?
 tags: []
 date-and-time: 2022-11-18, 8 PM - 9 PM
 location: Virtual
 organizers: ['BTBA']
-attend: https://harvard.zoom.us/meeting/register/tJ0vdemqrDkpEtKackZ4yH9rLHwoSaOFAOEs
+attend: [Zoom][RSVP]
 fb-link: https://www.facebook.com/events/440224461525685/
 ---
 
@@ -20,4 +20,6 @@ Have you ever worried about our future? Industrial pollution and climate change 
 - Time:
     - November 18th (Sat) 2022, 8 pm - 9  pm(EST)
 - Place:
-    - Virtual. [RSVP](https://harvard.zoom.us/meeting/register/tJ0vdemqrDkpEtKackZ4yH9rLHwoSaOFAOEs)
+    - Virtual. [RSVP][RSVP]
+
+[RSVP]: https://harvard.zoom.us/meeting/register/tJ0vdemqrDkpEtKackZ4yH9rLHwoSaOFAOEs
