Fix unsupported markdown syntax

--- a/_events/2022-11-18/2022-11-18.md
+++ b/_events/2022-11-18/2022-11-18.md
@@ -7,7 +7,7 @@ tags: []
 date-and-time: 2022-11-18, 8 PM - 9 PM
 location: Virtual
 organizers: ['BTBA']
-attend: [Zoom][RSVP]
+attend: [Zoom](https://harvard.zoom.us/meeting/register/tJ0vdemqrDkpEtKackZ4yH9rLHwoSaOFAOEs)
 fb-link: https://www.facebook.com/events/440224461525685/
 ---
 
@@ -18,8 +18,7 @@ fb-link: https://www.facebook.com/events/440224461525685/
 Have you ever worried about our future? Industrial pollution and climate change cause lots of disasters and losses. What can we do to solve or slow down the damage? Come and join us to hear what botanists learn from the plants adapting to climate change and environmental pollution.
 
 - Time:
-    - November 18th (Sat) 2022, 8 pm - 9  pm(EST)
+    - November 18th (Sat) 2022, 8 pm - 9 pm (EST)
 - Place:
-    - Virtual. [RSVP][RSVP]
+    - Virtual. [RSVP](https://harvard.zoom.us/meeting/register/tJ0vdemqrDkpEtKackZ4yH9rLHwoSaOFAOEs)
 
-[RSVP]: https://harvard.zoom.us/meeting/register/tJ0vdemqrDkpEtKackZ4yH9rLHwoSaOFAOEs
