Fix the format again

--- a/_events/2022-11-18/2022-11-18.md
+++ b/_events/2022-11-18/2022-11-18.md
@@ -7,7 +7,7 @@ tags: []
 date-and-time: 2022-11-18, 8 PM - 9 PM
 location: Virtual
 organizers: ['BTBA']
-attend: [Zoom](https://harvard.zoom.us/meeting/register/tJ0vdemqrDkpEtKackZ4yH9rLHwoSaOFAOEs)
+attend: Virtual on [Zoom](https://harvard.zoom.us/meeting/register/tJ0vdemqrDkpEtKackZ4yH9rLHwoSaOFAOEs)
 fb-link: https://www.facebook.com/events/440224461525685/
 ---
 
