Fix markdown format

--- a/_events/2023-05-12/2023-05-12.md
+++ b/_events/2023-05-12/2023-05-12.md
@@ -2,7 +2,7 @@
 layout: event-post
 serie: Academic Seminar
 # categories: [blog]
-name: BTBA May Academic Seminar-Unveiling the Mysteries of RNA
+name: BTBA May Academic Seminar—Unveiling the Mysteries of RNA
 tags: []
 date-and-time: 2023-05-12, 8 PM - 9 PM
 location: Virtual
