--- a/_events/2023-05-26/2023-05-26.md
+++ b/_events/2023-05-26/2023-05-26.md
@@ -2,12 +2,12 @@
 layout: event-post
 serie: Academic Seminar
 # categories: [blog]
-name: BTBA 2023 May special event: Academic Career in Japan
+name: BTBA 2023 May special event—Academic Career in Japan
 tags: []
 date-and-time: 2023-05-26, 9 PM - 10:30 PM
 location: Virtual
 organizers: ['BTBA']
-attend: https://forms.gle/GZs6RFkm2q65dwy98
+attend: Register [here](https://forms.gle/GZs6RFkm2q65dwy98)
 fb-link: https://www.facebook.com/events/621050149569309/
 ---
 
