Fix post header format and links

--- a/_events/2022-12-03/2022-12-03.md
+++ b/_events/2022-12-03/2022-12-03.md
@@ -7,8 +7,8 @@ tags: []
 date-and-time: 2022-12-03, 11 AM–12 PM
 location: Virtual
 organizers: ['BTBA']
-attend: Register [here][signup link]
-fb-link: https://www.facebook.com/events/599088261594549/
+attend: Register [here](https://shorturl.at/zQR56)
+fb-link: https://www.facebook.com/events/459967072913873/
 ---
 
 對 FDA 的工作充滿熱誠 想多了解 FDA 規範運行與工作機會嗎？
@@ -22,6 +22,4 @@ fb-link: https://www.facebook.com/events/599088261594549/
 3. The Work and Opportunities at FDA—To Protect and Promote Public Health
 
 - Time: December 3rd (Sat) 2022, 11 am–12 pm (EST)
-- Place: Virtual. [RSVP][signup link]
-
-[signup link]: https://shorturl.at/zQR56
+- Place: Virtual. [RSVP](https://shorturl.at/zQR56)
