--- a/_events/2023-03-11/2023-03-11.md
+++ b/_events/2023-03-11/2023-03-11.md
@@ -7,7 +7,7 @@ tags: []
 date-and-time: 2023-03-11, 2 PM - 3 PM
 location: Smith Campus Center (1350 Massachusetts Ave, Cambridge, MA 02138)
 organizers: ['BTBA']
-attend: Register [here][signup link]
+attend: Register [here](https://forms.gle/Sop3WvWsyQuArDJE7)
 fb-link: https://www.facebook.com/events/599088261594549/
 ---
 
@@ -19,6 +19,4 @@ Are you considering a career transition or looking to enhance your skills in the
 
 - Time: March 11th (Sat) 2023, 2 pm–3 pm (EST)
 - Place: Smith center Mt Auburn Room, 2F, Harvard Smith Campus Center (1350 Massachusetts Ave, Cambridge, MA 02138)
-- Register [here][signup link]
-
-[signup link]: https://forms.gle/Sop3WvWsyQuArDJE7
+- Register [here](https://forms.gle/Sop3WvWsyQuArDJE7)
