Fix format again

--- a/_events/2022-12-03/2022-12-03.md
+++ b/_events/2022-12-03/2022-12-03.md
@@ -1,8 +1,8 @@
 ---
 layout: event-post
-serie: Academic Seminar
+serie: Career Development Series
 # categories: [blog]
-name: BTBA Career Development Series Workshop\: Career Development for Life—IQ, EQ, and SQ?
+name: Career Development for Life—IQ, EQ, and SQ?
 tags: []
 date-and-time: 2022-12-03, 11 AM–12 PM
 location: Virtual
