--- a/_events/2023-04-29/2023-04-29.md
+++ b/_events/2023-04-29/2023-04-29.md
@@ -15,11 +15,10 @@ fb-link: https://www.facebook.com/events/6702032066478307/
 
 Protein-protein interaction plays a vital role in numerous biological functions such as immune signaling and antigen recognition. An understanding of the fundamental principles of protein-protein interactions has the potential for broad applications. Recently, the emergence of deep-learning-based protein structure prediction methods has created new opportunities for investigating protein-protein interactions at the structural level. Additionally, computational protein design has made significant strides in engineering de novo proteins that bind specifically to protein targets and perform desired functions. During the seminar, Professor Bruno Correia will present the latest advancements in the use of protein design for immunoengineering. The seminar will focus on the development of innovative approaches and concrete examples. Following the talk, Dr. Ching-Lin Hsieh will join Professor Correia in a discussion with the audience about the current achievements, challenges, and future work of protein engineering in immunology.
 
-- Registration: <
-https://forms.gle/GjxvRc5AgQXYqPey7>
+- Registration: <https://forms.gle/GjxvRc5AgQXYqPey7>
 - Time: 2023-04-29 (Sat) 2:00 pm - 3:30 pm (EDT)
 - Place: BioLabs Lecture Hall 1080, (Bri Biological Labs, 16 Divinity Ave, Cambridge, MA 02138)
-- Remote join through Zoom: Link is available at the end of the registration form
+- Remote join through Zoom. Link is available at the end of the registration form
 
 Event agenda (EDT):
 - 2:00 pm–3:00 pm Talk "Exploring the Landscape of Functional Proteins by Computational Design"
