--- a/_events/2023-04-07/2023-04-07.md
+++ b/_events/2023-04-07/2023-04-07.md
@@ -4,7 +4,7 @@ serie: Academic Seminar
 # categories: [blog]
 name: 2023 BTBA April Academic Seminar—How does the brain encode memory and space?
 tags: []
-date-and-time: 2023-04-07, 8 PM
+date-and-time: 2023-04-07, 8 PM - 9 PM
 location: Virtual
 organizers: ['BTBA']
 attend: Free
