Fix event title

--- a/_events/2023-03-24/2023-03-24.md
+++ b/_events/2023-03-24/2023-03-24.md
@@ -2,7 +2,7 @@
 layout: event-post
 serie: Academic Seminar
 # categories: [blog]
-name: BTBA March Workshop—Navigating Career Transition and Advancement in Biotech Industry
+name: BTBA March Academic Seminar—Application of machine learning in protein design
 tags: []
 date-and-time: 2023-03-24, 8 PM - 9 PM
 location: Virtual
