Fix the symposium is not free

--- a/_events/2023-07-08/2022-07-08.md
+++ b/_events/2023-07-08/2022-07-08.md
@@ -7,7 +7,7 @@ tags: []
 date-and-time: 2023-07-08, 8 AM to 2022-07-09, 12PM
 location: Northwest Science Building
 organizers: ['BTBA']
-attend: Free
+attend: Register [here](https://www.tickettailor.com/events/btba/902830)
 fb-link: https://www.facebook.com/events/1798970260499094
 ---
 
