Tweak rsvp style

--- a/_events/2023-10-21/2023-10-21.md
+++ b/_events/2023-10-21/2023-10-21.md
@@ -7,7 +7,7 @@ tags: []
 date-and-time: 2023-10-21, 11 AM - 4PM
 location: Lehman Hall (8 Harvard Yard, Cambridge, MA)
 organizers: ['BTBA','HTSA']
-attend: https://forms.gle/Bi1do7i44D78EvCs9
+attend: Register [here](https://forms.gle/Bi1do7i44D78EvCs9)
 fb-link: https://www.facebook.com/events/1044651909879497/
 ---
 
