Update JTBA event

--- a/_events/2023-10-28/2023-10-28.md
+++ b/_events/2023-10-28/2023-10-28.md
@@ -2,23 +2,37 @@
 layout: event-post
 serie: Career Development Series
 # categories: [blog]
-name: Special Event Biotech Career in Japan
+name: Special Event Biotech Career in Japan—Biotech Industry Career in Japan 日本求職大不同！
 tags: []
 date-and-time: 2023-10-28, 9 PM–10:45 PM ET
 location: Virtual
 organizers: ['BTBA', 'JTBA']
 attend: Register [here](https://forms.gle/WLUNugbDY23gW8EZ8)
-fb-link: https://www.facebook.com/btbatw/posts/pfbid0zVK97qgqQSmmWTa1Gm67JwTg8Q4A8CPyPFd31V9d4sF23ELoTGZLV6FXLtSHR5Nyl
+fb-link: https://www.facebook.com/events/295266950038344/
 ---
 
-✨✨✨今日本就職經驗談✨✨✨
+🍜日本台灣生技協會 (JTBA) 與BTBA將於10月28日於線上合辦一場日本求/轉職介紹的活動
 
-🍣您是否曾想過到日本發展，但礙於不會日文、沒有日本學歷、資訊不透明等障礙而猶豫不決？
+✨✨BTBA 2023 October Special Event: Biotech Industry Career in Japan  日本求職大不同！✨✨
 
-🍜日本台灣生技協會 (JTBA) 與BTBA將於10月28日於線上合辦一場日本求/轉職介紹的活動，專為還在猶豫的你精心打造！
+你知道日本面試官比起你的專業能力更看重你的個人特質嗎？在注重禮節的日本文化中，求職不單單只有語言差異，還有很多不得不知道的眉角！
 
-🍙本次的講師群涵蓋了 1.日本學歷 2.日語能力 3.工作經驗 的三條件組合，勢必可以cover到你的疑問！
+本次活動BTBA很榮幸邀請到三位目前任職於日本生醫產業的台灣前輩們，分享他們在日求職過程中的那些「內行人」才懂的技巧。講者中包括從零日文基礎開始的求職經歷、利用公司內轉職管道成功轉職的經歷、以及利用日本學歷當作求職跳版的經歷。三種方式一次聽懂！
 
 - 🌸活動時間：09:00 pm to 10:45 pm (EDT), Oct 28, 2023 (Saturday)
-- 🗼活動地點：線上會議室 (將於10月中釋出，詳情請見BTBA各大平台專頁)
+- 🗼活動地點：Online event, Zoom
 - 🎏活動報名連結：<https://forms.gle/WLUNugbDY23gW8EZ8>
+- ▶️ 活動講者 Speakers
+    - 楊晴棻
+        - 學歷 : 台灣大學分子與細胞生物學研究所碩士
+        - 現職 : Helene BioMed Group, Chief Scientific Officer
+    - 楊凱雯
+        - 學歷 : University of California, Berkeley Master of Business Administration
+        - 現職 : Thermo Fisher Scientific, Group Marketing Manager
+    - 陳盈光
+        - 學歷 : 東京大学農学博士
+        - 現職 : Guardant Health AMEA, Associate Director
+- ▶️ 活動主持人 Moderator
+    - 丘幃尹 (QIU, WEIYIN)
+        - Current : PhD student of Center for iPS Cell Research and Application, Kyoto University
+        - Major : Regenerative Medicine, Stem Cell Biology, Hematology
