--- a/_events/2023-11-18/2023-11-18.md
+++ b/_events/2023-11-18/2023-11-18.md
@@ -5,7 +5,7 @@ serie: Career Development Series
 name: BTBA November Panel—Data-Driven Decision Making in Biotech/Healthcare
 tags: []
 date-and-time: 2023-11-18, 12:30–4 PM ET
-location: Virtual
+location: Lehman Hall (8 Harvard Yard, Cambridge, MA)
 organizers: ['BTBA', 'BTPA']
 attend: Register [here](https://forms.gle/Fq8DAyEK41cVa1rq7)
 fb-link: https://www.facebook.com/events/1437045923901947/
