Fix linkedin links

--- a/_events/2023-11-18/2023-11-18.md
+++ b/_events/2023-11-18/2023-11-18.md
@@ -23,26 +23,27 @@ fb-link: https://www.facebook.com/events/1437045923901947/
     - 14:30 pm - 15:00 pm (ET) Networking
     - 15:00 pm - 16:00 pm (ET) BTBA monthly meeting
 - 📍 Place: Lehman Hall 201 at Harvard University, MA 02138 (near MBTA Harvard Station)
-- 👉Panel報名連結：https://forms.gle/Fq8DAyEK41cVa1rq7
+- 👉Panel報名連結：<https://forms.gle/Fq8DAyEK41cVa1rq7>
 - 🚩協辦單位：Boston Taiwanese Physician Association (BTPA)
 
 
-## Speakers
+### Speakers
 
-### Ying-Chih (Paul) Lo, M.D./Ph.D., Associate Director, Novartis
-https://www.linkedin.com/.../ying-chih-paul-lo-md-phd.../
+#### Ying-Chih (Paul) Lo, M.D./Ph.D., Associate Director, Novartis
+<https://www.linkedin.com/in/ying-chih-paul-lo-md-phd-3b696059/>
 
 Dr. Ying-Chih (Paul) Lo is a distinguished nephrologist with both MD and PhD in Biomedical Informatics from National Yang Ming University, Taiwan. He currently serves as the Associate Director of Portfolio Data Science and Advanced Analytics at Novartis. Prior to venturing into the pharmaceutical industry, Dr. Lo dedicated nearly four years to postdoctoral research at Brigham and Women's Hospital and Harvard Medical School. His extensive expertise in medical AI research spans a broad spectrum, encompassing predictive modeling, computer vision, and natural language processing. Dr. Lo is deeply passionate about harnessing the power of informatics and data science to advance health-related applications.
 
-### Georgia Lin, PMP, Sr. Program Manager, Takeda
-https://www.linkedin.com/in/georgia-lin-pmp/
+#### Georgia Lin, PMP, Sr. Program Manager, Takeda
+<https://www.linkedin.com/in/georgia-lin-pmp/>
 
 Georgia Lin is an experienced project manager in research, biotech, and medical devices. Her background includes lab management, operations, and biomarker development at BlueBird Bio. Since joining Takeda in 2021, she specializes in digital strategy for clinical trials and digital health product development, promoting cross-functional collaboration for streamlined processes. Georgia holds BSc and MSc degrees in Medical Lab Science, Pathology, and Nutrition & Metabolism.
 
-## Moderator
 
-### Chia-Hsing Pi, Ph.D, Sr. Scientist, Vertex Pharmaceuticals
-https://www.linkedin.com/in/chia-hsing-pi-13a29490/
+### Moderator
+
+#### Chia-Hsing Pi, Ph.D, Sr. Scientist, Vertex Pharmaceuticals
+<https://www.linkedin.com/in/chia-hsing-pi-13a29490/>
 
 Chia-Hsing is a seasoned scientist with extensive process development experience in cell and gene therapy. He has deep knowledge of applying Quality by Design (QbD) and has been involved in multiple end-to-end autologous and allogeneic cell therapies such as iPSC-derived neurology, cardiology, and neurology as well as ex vivo gene therapies from early to late phases. He holds his M.S. and Ph.D. from the University of Pennsylvania and the University of Minnesota - Twin Cities, respectively.
 
