Fix event title

--- a/_events/2024-01-26/2024-01-26.md
+++ b/_events/2024-01-26/2024-01-26.md
@@ -2,7 +2,7 @@
 layout: event-post
 serie: Career Development Series
 # categories: [blog]
-name: Innovative Development of Medical Devices—Entrepreneurial Spirit in ​Taiwan
+name: Exploring Academic Landscape—Entrepreneurial Spirit in ​Taiwan
 tags: []
 date-and-time: 2024-01-26, 9:00–10:30 PM ET
 location: Virtual
@@ -10,8 +10,6 @@ organizers: ['BTBA']
 attend: Register [here](https://forms.gle/AuxUhaW1q7wusrRW8)
 fb-link: https://www.facebook.com/events/398146829541203/
 ---
-
-💡💡💡Exploring Academic Landscape: Entrepreneurial Spirit in ​Taiwan💡💡💡
 
 妳/你是否也有著創立事業實現夢想或是加入創業團隊的想法，卻不知道從何開始呢？
 
