--- a/_events/2024-03-15/2024-03-15.md
+++ b/_events/2024-03-15/2024-03-15.md
@@ -5,7 +5,7 @@ serie: Academic Seminar
 name: 思覺失調症的轉譯醫學研究：如何設計小鼠模型、利用量化方式研究小鼠認知行為、和利用影像醫學找到數位生物標記和治療目標
 tags: []
 date-and-time: 2024-03-15, 9–10 PM ET
-location:
+location: Virtual
 organizers: ['BTBA']
 attend: Register [here](https://forms.gle/Q7do5ntNBT3nK4Yy6)
 fb-link: https://www.facebook.com/events/1165647404816755/
