--- a/_podcast/2024-03-01.md
+++ b/_podcast/2024-03-01.md
@@ -1,7 +1,7 @@
 ---
-title: S4 EP9：腦與神經科學系列：腦機介面的現實與未來（上） ft. 徐聖修博士（Dr. Sheng-Hsiou (Shawn) Hsu）(1/2) 🎧
+title: S4 EP.9：腦與神經科學系列：腦機介面的現實與未來 ft. 徐聖修博士（Dr. Sheng-Hsiou (Shawn) Hsu）(1/2) 🎧
 link: https://tmrbiotechmoments.podbean.com/e/sheng_hsiou_hsu_1/
-embed: <iframe src="https://open.spotify.com/embed/episode/6HG7xA9ZTcUqYnqP9a1NNM?utm_source=generator" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+embed: <iframe src="https://open.spotify.com/embed/episode/6xQUNCKKLfdq8Hn7XAKgBZ?utm_source=generator" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 ---
 
 最近 Elon Musk 的 Neuralink 據稱開始人體試驗，Neuralink 嘗試將人腦與電腦連結，將《駭客任務 (The Matrix)》成為現實的決心，引發各界許多關於腦機介面的討論。究竟什麼是腦機介面？我們離電影裡的世界又有多遙遠呢？科幻想像的未來世界外，目前的世界中腦機介面，也扮演著癱瘓病人與外界溝通的重要橋樑，幫助癱瘓病人維持和外界的交流。
