240402_podcast_abstract_blog_v6

--- a/_podcast/2024-04-02.md
+++ b/_podcast/2024-04-02.md
@@ -1,5 +1,5 @@
 ---
-title: S4 EP.11：「商業與策略」系列 - 藥廠投資組合管理 ft. 羅盈智醫師（Dr. Ying-Chih (Paul) Lo) 🎧
+title: S4 EP.11：「商業與策略」系列 - 藥廠投資組合管理 ft. 羅盈智醫師 (Dr. Ying-Chih (Paul) Lo) 🎧
 link: https://tmrbiotechmoments.podbean.com/e/ying_chih_paul_lo/
 embed: <iframe src="https://open.spotify.com/embed/episode/1hk704vrewXUBDWV3bGqsz?utm_source=generator" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 ---
