--- a/_podcast/2024-05-01.md
+++ b/_podcast/2024-05-01.md
@@ -15,7 +15,7 @@ embed: <iframe src="https://open.spotify.com/embed/episode/2RdD9ur7KhZS6Lf27ERg3
 
 Team:
 
-- 🧑‍💻 楊秉修博士 Bing-Shiou Yang：<ttps://www.linkedin.com/in/bing-shiou-yang-07462a7/>
+- 🧑‍💻 楊秉修博士 Bing-Shiou Yang：<https://www.linkedin.com/in/bing-shiou-yang-07462a7/>
 - 🎤 主持人 | 蔡函庭 Phoebe Tsai：<https://www.linkedin.com/in/hanting-phoebe-tsai-298a443b/>
 - 👩‍💻 後製 | 林茂然：<https://www.linkedin.com/in/mao-jan-lin-959734138/>
 - 👩‍💻 後製 | 林庚民：<https://www.linkedin.com/in/geng-min-lin-7b959a98/>
