--- a/_podcast/2024-06-01.md
+++ b/_podcast/2024-06-01.md
@@ -1,7 +1,7 @@
 ---
 title: S4 EP.15：從臨床到藥廠，橫跨太平洋兩岸的苦甜人生 ft. 林靜君醫師 🎧
 link: https://tmrbiotechmoments.podbean.com/e/june_lin/
-embed: <iframe src="ttps://open.spotify.com/embed/episode/5H2aGVFIGguCGKRXWwUEEV?utm_source=generator" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+embed: <iframe src="https://open.spotify.com/embed/episode/5H2aGVFIGguCGKRXWwUEEV?utm_source=generator" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 ---
 
 本集《生技來一刻》邀請到 June 林靜君醫師，她在橫跨太平洋兩岸的台灣與美國，都有豐富藥廠醫藥事務 (medical affairs) 經驗，同時也是具備臨床經驗的醫學專家。醫藥事務作為藥廠和臨床醫師間的橋樑，需要非常需要靈活地應對進退，除了醫學知識，對不同地區醫師文化的敏感度，更是勝任這份工作的關鍵。June 具備在台美兩地的成長經驗，以及扎實的醫師訓練，成為這份工作的不二人選。但儘管擁有跨文化的成長背景，June 在職涯早期階段，仍然十分費勁。June 大方地和我們分享了許多她如何克服文化障礙的珍貴經驗。
