--- a/_podcast/2024-10-01.md
+++ b/_podcast/2024-10-01.md
@@ -14,7 +14,7 @@ embed: <iframe src="https://open.spotify.com/embed/episode/5LDuNC3eVN0bwTMzDhxZO
 
 Team:
 
-- 🧑‍💻 姚若晴博士 Dr. Juo-Chin Robin Yao：<https://www.linkedin.com/in/juochinyao/>
+- 🧑‍💻 講者 | 姚若晴博士 Dr. Juo-Chin Robin Yao：<https://www.linkedin.com/in/juochinyao/>
 - 🎤 主持人 | 陳乃群：<https://www.linkedin.com/in/ncchen/>
 - 👩‍💻 後製 | 彭日平：<https://www.linkedin.com/in/riping-phang-827859a0/>
 - 👩‍💻 後製 | 林茂然：<https://www.linkedin.com/in/mao-jan-lin-959734138/>
